Адаптив блока services

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="container-fluide">
         <h2 class="title">Popular Services</h2>
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-        <div class="row text-left">
+        <div class="row row-description text-left">
           <div class="col-4">
             <div class="img-inner">
               <img src="img/workplace.png" alt="student company">
