--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
     <section class="block block_blue">
       <div class="container-fluide">
         <div class="row align-items-center">
-          <div class="col">
+          <div class="col-9">
             <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
           </div>
-          <div class="col col-form">
+          <div class="col-3 col-form">
             <a href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</a>
           </div>
         </div>
@@ -179,21 +179,21 @@
         <h2 class="title">Popular Services</h2>
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
         <div class="row row-description text-left">
-          <div class="col-4">
+          <div class="col">
             <div class="img-inner">
               <img src="img/workplace.png" alt="student company">
             </div>
             <h3 class="services__title">Turnaround Consulting</h3>
             <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
           </div>
-          <div class="col-4">
+          <div class="col">
             <div class="img-inner">
               <img src="img/student.png" alt="student">
             </div>
             <h3 class="services__title">Bonds & Commodities</h3>
             <p class="text">Companies dislike the term ‘turnaround consulting’ because it represents failure. The truth is that turnaround consulting represents success.</p>
           </div>
-          <div class="col-4">
+          <div class="col">
             <div class="img-inner">
               <img src="img/meeting.png" alt="conversation">
             </div>
