--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
   <div class="layot">
     <section class="about">
       <div class="container-fluide">
-        <div class="row">
-          <div class="col-6">
+        <div class="row row_media-block">
+          <div class="col-12 col-xl-6">
             <h2 class="title">Take away the risk & you can do anything.</h2>
             <p class="subtitle">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
             <p class="text">Integer blandit ultricies aliquam. Pellentesque quis dui varius, dapibus velit id, iaculis ipsum. Morbi ac eros feugiat, lacinia elit ut, elem turpis.Curabitur justo sapien, tempus sit amet rutrum eu, commodo eu lacus. Morbi in ligula nibh. Maecenas ut mi at odio hendrerit eleifend tempor.justo sapien, tempus </p>
@@ -161,13 +161,13 @@
       </div>
     </section>
   
-    <section class="block-form block_blue">
+    <section class="block block_blue">
       <div class="container-fluide">
-        <div class="row align-items-center">
-          <div class="col-9">
+        <div class="row row-form align-items-center">
+          <div class="col-9 col_media-center">
             <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
           </div>
-          <div class="col-3 col-form">
+          <div class="col-3 col-form col_media-center">
             <a href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</a>
           </div>
         </div>
