--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
   <header class="header">
     <div class="header__content">
-      <div class="container-fluide">
-        <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-md">
           <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Counsel"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
   <div id="carouselBanner" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-1 active carousel-banner">
-        <div class="container-fluide">
+        <div class="container-fluid">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-2 carousel-banner">
-        <div class="container-fluide">
+        <div class="container-fluid">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-3 carousel-banner">
-        <div class="container-fluide">
+        <div class="container-fluid">
           <div class="carousel-content float-right">
             <svg class="carousel-content__svg" width="300" height="378">
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
@@ -128,7 +128,7 @@
 
   <div class="layot">
     <section class="about">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <div class="row row_media-block">
           <div class="col-12 col-xl-6">
             <h2 class="title">Take away the risk & you can do anything.</h2>
@@ -138,7 +138,7 @@
           </div>
           <div class="col">
             <div class="col-img col-img_yellow col-img-right">
-              <p class="col-img__p"><img src="img/picture.png" alt="people" class="about__img"></p>
+              <p class="col-img__p col-img__p_right"><img src="img/picture.png" alt="people" class="about__img"></p>
             </div>
           </div>
         </div>
@@ -146,8 +146,8 @@
     </section>
   
     <section class="about about_gray">
-      <div class="container-fluide">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="row row_media-block">
           <div class="col">
             <img src="img/graph.png" alt="graph" class="about__img--gray">
           </div>
@@ -162,7 +162,7 @@
     </section>
   
     <section class="block block_blue">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <div class="row row-form align-items-center">
           <div class="col-9 col_media-center">
             <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
@@ -175,7 +175,7 @@
     </section>
   
     <section class="services text-center">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <h2 class="title">Popular Services</h2>
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
         <div class="row row-description text-left">
@@ -205,7 +205,7 @@
     </section>
   
     <section class="block block_bg text-center">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <div class="row">
           <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
           <div class="col"><p class="data"><span>1M</span>Subscribers</p></div>
@@ -216,8 +216,8 @@
     </section>
   
     <section class="about">
-      <div class="container-fluide">
-        <div class="row">
+      <div class="container-fluid">
+        <div class="row row_media-block">
           <div class="col col-img_yellow col-img-left">
             <p class="col-img__p"><a href="#" type="button" data-toggle="modal" data-target="#ModalVideo"><img src="img/video.png" alt="people" class="about__img"></a></p>
           </div>
@@ -232,7 +232,7 @@
     </section>
   
     <section class="review text-center">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner review-slider">
             <div class="carousel-item active">
@@ -262,7 +262,7 @@
     </section>
   
     <section class="block-addres text-center">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <h2 class="title">Contact with us</h2>
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
         <div class="row text-left">
@@ -304,7 +304,7 @@
     </section>  
     
     <footer class="footer block_blue">
-      <div class="container-fluide">
+      <div class="container-fluid">
         <div class="row justify-content-between">
           <div class="col">
             <p class="copyright">Copyright © <a href="index.html"> Consul</a></p>
