Адаптация блоков (карты, слайдер отзывов)

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
       <div class="container-fluid">
         <h2 class="title">Contact with us</h2>
         <p class="subtitle subtitle_center">Rapid solutions to the most complex business challenges with cooperative process-driven.</p>
-        <div class="row text-left">
-          <div class="col">
+        <div class="row row-map text-left">
+          <div class="col col-map">
             <div class="col_shadow">
               <div id="mapOne" style="width:100%; height:240px"></div>
               <h3 class="block-addres__title">Head Quarter</h3>
@@ -277,7 +277,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-map">
             <div class="col_shadow">
               <div id="mapTwo" style="width:100%; height:240px"></div>
               <h3 class="block-addres__title">California office</h3>
@@ -288,7 +288,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-map">
             <div class="col_shadow">
               <div id="mapThree" style="width:100%; height:240px"></div>
               <h3 class="block-addres__title">London office</h3>
