--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header class="header">
     <div class="header__content">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Counsel"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -84,8 +84,6 @@
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
               <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
             </svg>
-            <div class="carousel__bord"></div>
-            <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Consumer Products Consulting</h1>
             <a href="#" class="carousel-content__link">Learn more</a>
           </div>
@@ -98,8 +96,6 @@
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
               <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
             </svg>
-            <div class="carousel__bord"></div>
-            <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Working of technical capacity</h1>
             <a href="#" class="carousel-content__link">Learn more</a>
           </div>
@@ -112,8 +108,6 @@
               <polyline points="10,90 10,10 290,10 290,368, 10,368 10,368, 10,368 10,310" fill="none" stroke="#fde428" stroke-width="10" />
               <polyline points="10,270 10,240" fill="none" stroke="#fde428" stroke-width="10" />
             </svg>
-            <div class="carousel__bord"></div>
-            <div class="carousel__rect"></div>
             <h1 class="carousel-content__title">Services & Bussines Concept</h1>
             <a href="#" class="carousel-content__link">Learn more</a>
           </div>
@@ -149,7 +143,7 @@
       <div class="container-fluid">
         <div class="row row_media-block">
           <div class="col">
-            <img src="img/graph.png" alt="graph" class="about__img--gray">
+            <img src="img/graph.png" alt="graph" class="about__img_gray">
           </div>
           <div class="col">
             <h2 class="title">Constructingthe  best in class global assets.</h2>
@@ -207,10 +201,10 @@
     <section class="block block_bg text-center">
       <div class="container-fluid">
         <div class="row">
-          <div class="col"><p class="data"><span>7890</span>Coffee cups</p></div>
-          <div class="col"><p class="data"><span>1M</span>Subscribers</p></div>
-          <div class="col"><p class="data"><span>1509</span>Customers</p></div>
-          <div class="col"><p class="data"><span>5972</span>Purchases</p></div>
+          <div class="col-6 col-md-3"><p class="data"><span>7890</span>Coffee cups</p></div>
+          <div class="col-6 col-md-3"><p class="data"><span>1M</span>Subscribers</p></div>
+          <div class="col-6 col-md-3"><p class="data"><span>1509</span>Customers</p></div>
+          <div class="col-6 col-md-3"><p class="data"><span>5972</span>Purchases</p></div>
         </div>
       </div>
     </section>
@@ -305,7 +299,7 @@
     
     <footer class="footer block_blue">
       <div class="container-fluid">
-        <div class="row justify-content-between">
+        <div class="row row-footer justify-content-between">
           <div class="col">
             <p class="copyright">Copyright © <a href="index.html"> Consul</a></p>
           </div>
