--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="header__content">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Counsel"></a>
+          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Counsel" class="logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
