--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   </div>
 
   <!-- Modal Video -->
-  <div class="modal fade" id="ModalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- <div class="modal fade" id="ModalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -358,7 +358,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Scripts -->
   <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
