--- a/index.html
+++ b/index.html
@@ -352,25 +352,9 @@
     </div>
   </div>
 
-  <!-- Modal Video -->
-  <!-- <div class="modal fade" id="ModalVideo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Video</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-         <iframe width="100%" height="315px" src="https://www.youtube.com/embed/AH1FN_y8IP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   <!-- Scripts -->
-  <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=en_US&amp" type="text/javascript"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
