--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="video">
               <a class="video__link" href="https://youtu.be/SD1Y87EOFZA">
                 <picture>
-                  <source srcset="https://i.ytimg.com/vi_webp/SD1Y87EOFZA/maxresdefault.webp" type="image/webp">
+                  <source srcset="img/video.png" type="image/webp">
                   <img class="video__media about__img" src="https://i.ytimg.com/vi/SD1Y87EOFZA/maxresdefault.jpg" alt="How to Start a Business">
                 </picture>
               </a>
