--- a/index_russia.html
+++ b/index_russia.html
@@ -113,8 +113,8 @@
       </div>
     </div>
     <div class="carousel-control">
-      <a class="carousel-control-prev" href="#carouselBanner" role="button" data-slide="prev">Пред.</a>
-      <a class="carousel-control-next" href="#carouselBanner" role="button" data-slide="next">След.</a>
+      <a class="carousel-control-prev carousel-control-prev__banner" href="#carouselBanner" role="button" data-slide="prev">Пред.</a>
+      <a class="carousel-control-next carousel-control-next__banner" href="#carouselBanner" role="button" data-slide="next">След.</a>
     </div>
   </div>
 
