--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       </div>
     </div>
     <div class="carousel-control">
-      <a class="carousel-control-prev" href="#carouselBanner" role="button" data-slide="prev">Previous</a>
-      <a class="carousel-control-next" href="#carouselBanner" role="button" data-slide="next">Next</a>
+      <a class="carousel-control-prev carousel-control-prev__banner" href="#carouselBanner" role="button" data-slide="prev">Previous</a>
+      <a class="carousel-control-next carousel-control-next__banner" href="#carouselBanner" role="button" data-slide="next">Next</a>
     </div>
   </div>
 
@@ -160,7 +160,7 @@
             <p class="block__text">Looking for a First-Class Business Plan Consultant?</p>
           </div>
           <div class="col-3 col-form col_media-center">
-            <a href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</a>
+            <button href="#" type="button" class="btn" data-toggle="modal" data-target="#ModalContact">Contact Now</button>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
             <div class="video">
               <a class="video__link" href="https://youtu.be/SD1Y87EOFZA">
                 <picture>
-                  <source srcset="img/video.png" type="image/webp">
+                  <source srcset="https://i.ytimg.com/vi/SD1Y87EOFZA/maxresdefault.jpg" type="image/webp">
                   <img class="video__media about__img" src="https://i.ytimg.com/vi/SD1Y87EOFZA/maxresdefault.jpg" alt="How to Start a Business">
                 </picture>
               </a>
@@ -222,7 +222,6 @@
                 <svg width="68" height="48" viewBox="0 0 68 48"><path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path class="video__button-icon" d="M 45,24 27,14 27,34"></path></svg>
               </button>
             </div>
-            <!-- <p class="col-img__p"><a href="#" type="button" data-toggle="modal" data-target="#ModalVideo"><img src="img/video.png" alt="people" class="about__img"></a></p> -->
           </div>
           <div class="col">
             <h2 class="title">Why  we best Consulting office in london?</h2>
@@ -260,6 +259,14 @@
               </div>
             </div>
           </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div> 
       </div>
     </section>
